# data_quality

./: .gitignore  AI_INTEGRATION_SUMMARY.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  ERROR_HANDLING_GUIDE.md  FREE_VS_PAID.md  LICENSE  README.md  README_DATABASE.md  TOOL_COMPARISON.md  ci_test_results.json  coverage.xml  critical_issues_db.sqlite  demo_sqlite.py  deployment_gate.py  fix_critical_issues.py  mypy.ini  pyproject.toml  real_data_checker.py  smart_backfill_suggester.py  test.db
.github/: pull_request_template.md
.github/workflows/: ci.yml  data-quality-check.yml  release.yml
examples/: ai_analysis_example.py  ai_reads_cli_output.py
scripts/: ci_cd_data_quality.py  policy_checks.py
sql/: create_tables.sql  setup_module.py  test_setup.py  validate_schema.py
src/data_quality/: __init__.py  advanced_analysis.py  ai_integration.py  benchmark_storage.py  benchmarks.py  checkpoints.py  cli.py  cli_clean.py  exceptions.py  interactive_cli.py  models.py  null_scan.py  quality_scanner.py  safe_scanners.py  schema_analyzer.py  secure_db.py  sql_policy.py  validation.py
src/data_quality.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_benchmarks.py  test_data_quality_benchmarks.py  test_data_quality_benchmarks.py.backup  test_null_scan.py  test_quality_scanner.py  test_schema_analyzer.py  test_security.py
