[tool.poetry]
name = "data-quality"
version = "0.1.0"
description = "Fast data-quality checks (NULLs, orphans, dupes)"
authors = ["J Smash <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "data_quality", from = "src" }]

[tool.poetry.scripts]
data-quality = "data_quality.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.30"
python-dotenv = "^1.0.1"
click = "^8.1.0"
pymysql = { version = "^1.1.0", optional = true }
psycopg2-binary = { version = "^2.9.0", optional = true }

[tool.poetry.extras]
mysql = ["pymysql"]
postgresql = ["psycopg2-binary"]
all = ["pymysql", "psycopg2-binary"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.7"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
packages = ["data_quality"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
